--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Estimates the users geolocation, ip, country, city, region, provider, and postal code using data from the ipinfo.io API and displays a marker on the map using the Google Maps API."
   />
 
-  <link rel="stylesheet" type="text/css" href="/assets/dist/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="assets/dist/css/style.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsplQBwPmOSqBvcOWb3yIyH6XZnpXqtNA &callback=initMap" async
     defer></script>
-  <script src="/assets/dist/js/app.min.js"></script>
+  <script src="assets/dist/js/app.min.js"></script>
 </body>
 
 </html>
